[project]
name = "forest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josselin Davion Jouffre", email = "josselin.davion--jouffre@etu.minesparis.psl.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
forest = "forest.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
